src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwF1000-dhF500-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-maximized true\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1239 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 500, bounds: 1239 × 688, states: [Activated]
