src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwF1000-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-maximized true\n    default-column-width { fixed 1000; }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1240 × 328, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 328, bounds: 1240 × 680, states: []
size: 1240 × 328, bounds: 1240 × 680, states: [Activated]
